header fix on narrow widths

--- a/src/styles/partials/main.less
+++ b/src/styles/partials/main.less
@@ -580,10 +580,13 @@ footer {
   }
 }
 
-.popup-stroke.hovered .hover-image-wrapper {
-  display: block;
-  visibility: visible;
-  opacity: 1.0;
+.popup-stroke.hovered {
+
+  .hover-image-wrapper {
+    display: block;
+    visibility: visible;
+    opacity: 1.0;
+  }
 }
 
 #heart-svg {
